updated README again

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 ## Description
-This is a project I had to do for Ruby on Rails class when I was in Vilnius University (Computer Science BSc) in year 2009.
-The goal was to learn TDD and Ruby language by creating a project and I choose to create Car rental management system.
+
+This is a project I had to do for **Ruby** on Rails class when I was in Vilnius University (**Computer Science BSc**) in year 2009.
+The goal was to learn TDD and Ruby language by creating a project and I choose to create **Car rental management system**.
 
 ===========================================================
 Reikalavimai is savybes.txt :
